clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__compound_commands__parse_arithmetic_for_empty_parts.snap
---
source: clash-brush-parser/src/parser/tests/compound_commands.rs
assertion_line: 59
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "for (( ; ; )); do echo loop; done",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ArithmeticForClause(ArithmeticForClauseCommand(
                initializer: Some(UnexpandedArithmeticExpr(
                  value: "",
                )),
                condition: Some(UnexpandedArithmeticExpr(
                  value: "",
                )),
                updater: Some(UnexpandedArithmeticExpr(
                  value: "",
                )),
                body: DoGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "loop",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
