clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__compound_commands__parse_arithmetic_increment.snap
---
source: clash-brush-parser/src/parser/tests/compound_commands.rs
assertion_line: 24
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "(( x++ ))",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(Arithmetic(ArithmeticCommand(
                expr: UnexpandedArithmeticExpr(
                  value: "x++",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
