clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__compound_commands__parse_arithmetic_simple.snap
---
source: clash-brush-parser/src/parser/tests/compound_commands.rs
assertion_line: 13
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "(( 1 + 2 ))",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(Arithmetic(ArithmeticCommand(
                expr: UnexpandedArithmeticExpr(
                  value: "1 + 2",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
