clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__compound_commands__parse_brace_group.snap
---
source: clash-brush-parser/src/parser/tests/compound_commands.rs
assertion_line: 72
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "{ echo hello; }",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(BraceGroup(BraceGroupCommand(
                list: CompoundList([
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Simple(SimpleCommand(
                          word_or_name: Some(Word(
                            value: "echo",
                            loc: "[location]",
                          )),
                          suffix: Some(CommandSuffix([
                            Word(Word(
                              value: "hello",
                              loc: "[location]",
                            )),
                          ])),
                        )),
                      ],
                    ),
                  ), Sequence),
                ]),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
